Position opener text

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <span class="headliner-one">bright</span>
       <span class="headliner-two">eyes</span>
     </h1>
-    <h2><span>lucy</span> <span>dacus</span></h2>
-    <h2><span>japanese</span> <span>breakfast</span></h2>
+    <h2 class="opener-one"><span>lucy</span> <span>dacus</span></h2>
+    <h2 class="opener-two"><span>japanese</span> <span>breakfast</span></h2>
     <p>
       <span>forest hills stadium</span>
       <span>1 tennis pl, forest hills, queens</span>
