Extremely hack version, getting it working

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </h1>
     <h2 class="opener-one"><span>lucy</span> <span>dacus</span></h2>
     <h2 class="opener-two"><span>japanese</span> <span>breakfast</span></h2>
-    <p>
+    <p class="info-location">
       <span>forest hills stadium</span>
       <span>1 tennis pl, forest hills, queens</span>
     </p>
-    <p>
+    <p class="info-date">
       <span>saturday</span>
       <span>june 20 2020 / 6pm</span>
     </p>
